# pydantic-ai-agent

./: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py  queue.py
backend/app/agent/: memory.py  messages.py  model_router.py  observability.py  parallel.py  planner.py  retry_executor.py  role_agents.py  runner.py  spawn.py  tools.py
backend/app/agents/: api_agent.py  devops_agent.py  local_agent.py  orchestrator_agent.py
backend/app/api/: main.py  schemas.py
backend/app/tools/: local_tools.py  registry.py  validation.py
backend/app/tools/apis/: github_api.py
backend/app/tools/devops/: git_tools.py  k8s_tools.py
backend/app/worker/: main.py
backend/scripts/: run_worker.py
backend/tests/: test_api.py  test_model_router.py  test_planner.py  test_queue.py  test_registry_routing.py  test_role_agents.py  test_spawn.py  test_tool_validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ChatConsole.tsx  Header.tsx  RightPanel.tsx  Sidebar.tsx  StatusPill.tsx
frontend/src/data/: dashboard.ts
frontend/src/types/: chat.ts
frontend/src/utils/: toolDisplay.ts
k8s/: agent-deployment.yaml
